# llm-waybar

./: .gitignore  Cargo.toml  README.md  flake.nix  result  test-hooks.sh
crates/llm-bridge-claude/: Cargo.toml
crates/llm-bridge-claude/src/: hooks.rs  lib.rs  provider.rs  transcript.rs  usage.rs
crates/llm-bridge-core/: Cargo.toml
crates/llm-bridge-core/src/: config.rs  lib.rs  provider.rs  signal.rs  socket.rs  state.rs
crates/waybar-llm-bridge/: Cargo.toml
crates/waybar-llm-bridge/src/: aggregator.rs  daemon.rs  main.rs
demo/: demo.sh  lib.sh
demo/scenarios/: multi-session.sh  single-session.sh
docs/: claude-self-test.md  waybar-installation.md
docs/design/: architecture.md  commands.md
docs/plans/: 2025-01-10-implementation-plan.md  2025-01-10-rust-project-structure.md  2025-12-10-fix-statusline-display.md  2025-12-12-demo-and-multi-session-design.md  2025-12-12-demo-multi-session-implementation.md  2025-12-24-daemon-architecture-design.md  2025-12-24-daemon-implementation.md
docs/research/: intro.md
docs/research/claude/: agent_sdk.md
