[package]
name = "waybar-llm-bridge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "waybar-llm-bridge"
path = "src/main.rs"

[dependencies]
llm-bridge-core = { path = "../llm-bridge-core" }
llm-bridge-claude = { path = "../llm-bridge-claude" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
notify = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
nix = { version = "0.29", features = ["signal", "process"] }
